--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5",
+    "axios": "^1.7.7",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "zustand": "^5.0.8",
-    "axios": "^1.7.7",
-    "@tanstack/react-query": "^5"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -26,11 +27,12 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
-    "tailwindcss": "^4",
-    "typescript": "^5",
     "husky": "^9",
     "lint-staged": "^15",
-    "prettier": "^3"
+    "patch-package": "^8.0.1",
+    "prettier": "^3",
+    "tailwindcss": "^4",
+    "typescript": "5.9.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
